Fix home collection size on mobile

--- a/src/assets/scss/_home-collection.scss
+++ b/src/assets/scss/_home-collection.scss
@@ -71,7 +71,7 @@
                 weight: 700;
             }
             bottom: 2.8rem;
-            @media only screen and (max-width: 576px){
+            @media only screen and (max-width: 767px){
                 font: {
                     size: 18px;
                     weight: 500;
